--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ body {
   background-color: #ffffff;
 }
 
+.container-width {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .visually-hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
@@ -39,15 +45,13 @@ a {
 }
 
 .main-navigation {
-  display: flex;
-  width: 1200px;
-  margin: auto;
+  position: relative;
 }
 
 .site-navigation {
   display: flex;
   justify-content: space-between;
-  width: 1070px;
+  width: 1200px;
   list-style: none;
   margin: 0 auto;
   line-height: 26px;
@@ -55,17 +59,28 @@ a {
   color: #000000;
   padding-top: 15px;
   padding-bottom: 15px;
-  padding-left: 2px;
-  padding-right: 2px;
   background-color: #ffffff;
 }
 
-.site-navigation li:nth-child(3) {
+.sedona-logo {
   position: absolute;
   top: 0;
   left: 50%;
   margin-left: -60px;
 }
+
+.site-navigation li {
+  width: 240px;
+  text-align: center;
+  
+}
+
+.site-navigation li:nth-child(2) {
+  margin-right: 240px;
+}
+
+
+
 
 .site-navigation a {
   color: #000000;
@@ -85,8 +100,6 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: auto;
-  width: 1200px;
   padding-top: 510px;
   background-color: #ffffff;
   background-image: url("../img/intro-welcome.svg"),
@@ -106,8 +119,8 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 1200px;
   padding-top: 60px;
+  width: 1200px;
   background-color: #ffffff;
 }
 
@@ -131,8 +144,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 1200px;
-  margin: auto;
+
   color: #ffffff;
   background-color: #81b3d2;
 }
@@ -160,8 +172,7 @@ a {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  width: 1200px;
-  margin: 0 auto;
+
   padding-top: 160px;
   text-align: center;
   list-style: none;
@@ -212,8 +223,7 @@ a {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
-  width: 1200px;
-  margin: auto;
+
   color: #ffffff;
   background-color: #81b3d2;
 }
@@ -238,8 +248,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 1200px;
-  margin: auto;
+
   text-align: center;
 }
 
@@ -375,12 +384,11 @@ input[type=number]:focus {
   background-color: #5496bd;
 }
 
-footer {
+.main-footer {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 1200px;
-  margin: auto;
+
 }
 
 .tag a {
@@ -455,8 +463,7 @@ footer {
 
 .filters {
   display: flex;
-  width: 1200px;
-  margin: 0 auto;
+
   color: #ffffff;
   background-image: url("../img/filter-background.jpg");
   background-position: left center;
@@ -524,8 +531,7 @@ footer {
 
 .result {
   display: flex;
-  width: 1200px;
-  margin: 0 auto;
+
   justify-content: space-between;
   text-align: left;
   font-family: "PT Sans", "Arial", sans-serif;
@@ -583,14 +589,14 @@ footer {
 .catalog-list {
   display: flex;
   justify-content: center;
-  width: 1200px;
+
   flex-direction: column;
-  margin: auto;
+
 }
 
 .catalog-hotel {
   list-style: none;
-  width: 1200px;
+
   border-top: 1px solid rgb(229, 229, 229);
 }
 
